[package]
name = "ldap3_client"
version = "0.1.0"
authors = ["William Brown <william.brown@suse.com>"]
edition = "2021"

description = "LDAP Command Line Clients"
repository = "https://github.com/kanidm/ldap3_client"
readme = "README.md"
keywords = ["ldap", "protocol", "authentication", "chaos"]
categories = ["authentication"]
license = "MPL-2.0"

[lib]
name = "ldapcli"
path = "src/lib.rs"

[[bin]]
name = "ldap"
path = "src/ldap.rs"

[[bin]]
name = "cldap"
path = "src/cldap.rs"


[dependencies]
# ldap3_proto = "0.2"
ldap3_proto = { path = "../ldap3_proto" }

tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

structopt = { version = "0.3", default-features = false }
url = "2"

futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["rt", "net", "time", "sync", "signal", "macros", "io-util"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-openssl = "0.6"
openssl = "0.10"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "5.0"

[build-dependencies]
structopt = { version = "0.3", default-features = false }
url = "2"

